# sensor_position_dataset_helper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: format_check.yml
sensor_position_dataset_helper/: __init__.py  consts.py  gaitmap_dataset.py  helper.py  internal_helpers.py  tpcp_dataset.py  utils.py  zeni_event_detection.py
tests/: conftest.py  test_gaitmap_dataset.py  test_tpcp_dataset.py
tests/snapshots/: test_data_regression_SensorPositionDatasetMocap_back.json  test_data_regression_SensorPositionDatasetMocap_l_ankle.json  test_data_regression_SensorPositionDatasetMocap_l_cavity.json  test_data_regression_SensorPositionDatasetMocap_l_heel.json  test_data_regression_SensorPositionDatasetMocap_l_insole.json  test_data_regression_SensorPositionDatasetMocap_l_instep.json  test_data_regression_SensorPositionDatasetMocap_l_lateral.json  test_data_regression_SensorPositionDatasetMocap_l_medial.json  test_data_regression_SensorPositionDatasetMocap_r_ankle.json  test_data_regression_SensorPositionDatasetMocap_r_cavity.json  test_data_regression_SensorPositionDatasetMocap_r_heel.json  test_data_regression_SensorPositionDatasetMocap_r_insole.json  test_data_regression_SensorPositionDatasetMocap_r_instep.json  test_data_regression_SensorPositionDatasetMocap_r_lateral.json  test_data_regression_SensorPositionDatasetMocap_r_medial.json  test_data_regression_SensorPositionDatasetMocap_sync.json  test_data_regression_SensorPositionDatasetSegmentation_back.json  test_data_regression_SensorPositionDatasetSegmentation_l_ankle.json  (+14 more)
